infra/k8s/production/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ceq-api
  namespace: ceq
spec:
  type: ClusterIP
  selector:
    app: ceq-api
  ports:
  - port: 80
    targetPort: 5800
    protocol: TCP
